# tiny-https-proxy

./: Readme.md  meson.build  proxy.c  socket.c  socket.h  socket_win.c  test_proxy.ps1  test_proxy.sh  utils.c  utils.h
src/: main.c  proxy.c  server.h  utils.c  utils.h
src/unix/: platform.h  server.c  socket.c  socket.h
src/win32/: compat.h  server.c  socket.c  socket.h
